[tool.poetry]
name = "ailment"
version = "0.1.0"
description = ""
authors = ["r-cha <robert@akchandler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynecone = "^0.1.18"
openai = "^0.27.0"
replicate = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
